# kws

./: command  compare_server_client_dump.py  config.yaml  readme.md  resample_bin.py  revert_bin.py  server.py
client_test/: client_out.txt  test_client.py
cpp/: CMakeLists.txt  bind.cpp  melspec.hpp  server.cpp.bk  sound_classification.pyi
cpp copy/: CMakeLists.txt  main.cpp  melspec.cpp  melspec.hpp  sound_classification_v2.cpp  sound_classification_v2.hpp
datasets/images/: 0040.npy  0077.npy  0101.npy  0103.npy  0145.npy  0176.npy  0211.npy  0213.npy  0309.npy  0516.npy  processed_hello_sn_common_voice_zh-CN_33466542.npy  processed_hello_sn_common_voice_zh-CN_33468344.npy  processed_hello_sn_common_voice_zh-CN_33479251.npy  processed_hello_sn_common_voice_zh-CN_33481063.npy  processed_hello_sn_common_voice_zh-CN_33489780.npy  processed_hello_sn_common_voice_zh-CN_33490266.npy  processed_hello_sn_common_voice_zh-CN_33491658.npy  processed_hello_sn_common_voice_zh-CN_33497568.npy  processed_hello_sn_common_voice_zh-CN_33500517.npy  processed_hello_sn_common_voice_zh-CN_33501722.npy  processed_hello_sn_common_voice_zh-CN_33504159.npy  processed_hello_sn_common_voice_zh-CN_33505869.npy  processed_hello_sn_common_voice_zh-CN_33510651.npy  processed_hello_sn_common_voice_zh-CN_33552338.npy  processed_hello_sn_common_voice_zh-CN_33560288.npy  processed_hello_sn_common_voice_zh-CN_33568745.npy  processed_hello_sn_common_voice_zh-CN_33570549.npy  (+72 more)
kws_v1/: .gitignore  Dockerfile  config.yaml  make_service.md  readme.md  requirements.txt  server.py
kws_v1/client_test/: test_client.py
kws_v2/: Dockerfile  config_bm1684x.yaml  config_bm1688.yaml  model.py  readme.md  server.py  start_run.sh
scripts/: convert.sh  download.sh  gen_int8bmodel_mlir.sh
test/: client.py  double_resample.py  global.py  server.py
test_data/: README.md
(+24 files in other folders)
